--- a/index.html
+++ b/index.html
@@ -12,15 +12,14 @@
 
 <body>
     
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit quam et debitis dicta odit dolore eaque at ipsam tenetur. Quod est in laudantium voluptate placeat sed consequatur nemo libero. Natus!</p>
 
-    <div>
+    <!-- <div>
         <form action="#">
             <fieldset>
                 <legend>Title</legend>
             </fieldset>
         </form>
-    </div>
+    </div> -->
 
 
 </body>
