--- a/index.html
+++ b/index.html
@@ -2,22 +2,54 @@
 <html lang="en">
 
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-
-<link rel="stylesheet" href="css/style.css">
-<title>Классы</title>
+<!-- no style -->
 </head>
 
 <body>
     
-<b>lorem2</b>
-<b>lorem2</b>
-<b>lorem2</b>
-<b>lorem2</b>
-<b>lorem2</b>
-<b>lorem2</b>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit quam et debitis dicta odit dolore eaque at ipsam tenetur. Quod est in laudantium voluptate placeat sed consequatur nemo libero. Natus!</p>
+
+    <div>
+        <form action="#">
+            <fieldset>
+                <legend>Title</legend>
+            </fieldset>
+        </form>
+    </div>
+
+    <table>
+        <caption>Table</caption>
+        <tbody>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+        </tbody>
+    </table>
 
 
 </body>
