--- a/index.html
+++ b/index.html
@@ -51,6 +51,16 @@
         </tbody>
     </table>
 
+    <form action="#">
+        <input type="text">
+        <input type="text">
+        <input type="text">
+        <input type="text">
+        <input type="text">
+        <input type="text">
+        <input type="text">
+    </form>
+
 
 </body>
 
