--- a/index.html
+++ b/index.html
@@ -51,6 +51,17 @@
         </tbody>
     </table>
 
+    <nav>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </nav>
+
 </body>
 
 </html>
