--- a/index.html
+++ b/index.html
@@ -62,6 +62,14 @@
         <div></div>
     </nav>
 
+    <form action="#">
+        <fieldset>
+            <input type="text">
+            <input type="text">
+            <input type="text">
+            <button>Test</button>
+        </fieldset>
+    </form>
 </body>
 
 </html>
