--- a/index.html
+++ b/index.html
@@ -82,6 +82,18 @@
         <li></li>
         <li></li>
     </ol>
+    
+    <ul>
+        <li></li>
+        <li></li>
+    </ul>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt dignissimos quaerat ipsa. Labore id atque architecto officiis libero eveniet placeat laboriosam consequuntur, dolorum facilis aut accusamus, pariatur eos laborum ad!</p>
+
+    <code>
+        function
+    </code>
+    
 </body>
 
 </html>
