--- a/index.html
+++ b/index.html
@@ -70,6 +70,22 @@
             <button>Test</button>
         </fieldset>
     </form>
+    <form action="#">
+        <fieldset>
+            <input type="text">
+            <input type="text">
+            <input type="text">
+            <button>Test</button>
+        </fieldset>
+    </form>
+    <form action="#">
+        <fieldset>
+            <input type="text">
+            <input type="text">
+            <input type="text">
+            <button>Test</button>
+        </fieldset>
+    </form>
     
     
 </body>
